# Parallel-Algorithms

./: .gitignore  .gitmodules  README.md  analysis.ipynb  experiment.sh  test.ipynb  test.py  test_crash.py
data/: .gitignore  algorithm_memory_v0.3_10000.txt  algorithm_time_v0.1.npy  algorithm_time_v0.2.npy  algorithm_time_v0.3.npy  algorithm_time_v0.3_20000.npy  cpualgorithm_time.npy  homology_algo_time.npy  homology_algo_time_gauss.npy  tf_time.npy
data/homology/: PathGraph0.npz  PathGraph1.npz  PathGraph2.npz  PathGraph3.npz
scripts/: __init__.py  build_graphs.ipynb  graphs_data_generator.py  helpers.py  matrices_generator.py  try_crash.py
src/: .gitignore  CMakeLists.txt  log.txt  setup.py
src/parallelrank/: MatrixTest.txt  __init__.py  converter.py  gauss_algorithm.cpp  globals.py  helpers.c  kernel.cu  main.c  reduction_algorithm.cpp
tests/: matrix_10000x1000_10.npz  matrix_1000x1000_93.npz  matrix_10x1000_1.npz  matrix_zeros.npz  test_rank_computation.py
